--- a/src/ShuppanButsu.Web/ShuppanButsu.Web.csproj
+++ b/src/ShuppanButsu.Web/ShuppanButsu.Web.csproj
@@ -160,6 +160,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Content Include="Global.asax" />
+    <None Include="log4net.config" />
     <Content Include="MetaweblogApi\ThanksTo.txt" />
     <None Include="Scripts\jquery-1.8.0.intellisense.js" />
     <Content Include="NhEventStoreConfiguration.xml">
