--- a/src/ShuppanButsu.Web/Web.config
+++ b/src/ShuppanButsu.Web/Web.config
@@ -10,6 +10,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="log4net.Internal.Debug" value="true"/>
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
@@ -38,5 +39,16 @@
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
-  </runtime>
+  </runtime> 
+   
+  <system.diagnostics>
+    <trace autoflush="true">
+      <listeners>
+        <add
+          name="textWriterTraceListener"
+          type="System.Diagnostics.TextWriterTraceListener"
+          initializeData="C:\temp\log4net.txt" />
+      </listeners>
+    </trace>
+  </system.diagnostics>
 </configuration>   
