--- a/src/ShuppanButsu.Web/Web.config
+++ b/src/ShuppanButsu.Web/Web.config
@@ -10,7 +10,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="log4net.Internal.Debug" value="true"/>
+    <add key="log4net.Internal.Debug" value="true" />
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
@@ -28,27 +28,23 @@
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-    <handlers> 
+    <handlers>
       <add name="MetaWeblogHandler" verb="*" path="MetaWeblog.axd" type="ShuppanButsu.Web.MetaweblogApi.MetaWebLogHandlerFactory, ShuppanButsu.Web" />
     </handlers>
   </system.webServer>
-  <runtime> 
+  <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Web" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
-  </runtime> 
-   
+  </runtime>
   <system.diagnostics>
     <trace autoflush="true">
       <listeners>
-        <add
-          name="textWriterTraceListener"
-          type="System.Diagnostics.TextWriterTraceListener"
-          initializeData="C:\temp\log4net.txt" />
+        <add name="textWriterTraceListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="C:\temp\log4net.txt" />
       </listeners>
     </trace>
   </system.diagnostics>
-</configuration>   
+</configuration>
