--- a/src/ShuppanButsu/packages.config
+++ b/src/ShuppanButsu/packages.config
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="3.1.0" targetFramework="net45" />
+  <package id="Castle.Core-log4net" version="3.1.0" targetFramework="net45" />
   <package id="Castle.LoggingFacility" version="3.1.0" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.1.0" targetFramework="net45" />
+  <package id="Castle.Windsor-log4net" version="3.1.0" targetFramework="net45" />
   <package id="fasterflect" version="2.1.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
-  <package id="log4net" version="2.0.0" targetFramework="net45" />
+  <package id="log4net" version="1.2.10" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.8" targetFramework="net45" />
   <package id="NHibernate" version="3.3.1.4000" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.81.1" targetFramework="net45" />
