--- a/src/ShuppanButsu.Web/log4net.config
+++ b/src/ShuppanButsu.Web/log4net.config
@@ -33,13 +33,20 @@
   <root>
     <level value="DEBUG" />
     <appender-ref ref="UdpAppender" />
-    <appender-ref ref="RemotingAppender" />
-    <appender-ref ref="ColoredConsoleAppender" />
+    <!--<appender-ref ref="RemotingAppender" />
+    <appender-ref ref="ColoredConsoleAppender" />-->
   </root>
   <logger name="NHibernate" additivity="false">
     <level value="WARN" />
     <appender-ref ref="UdpAppender" />
-    <appender-ref ref="TraceAppender" />
-    <appender-ref ref="ColoredConsoleAppender" />
+    <!--<appender-ref ref="TraceAppender" />
+    <appender-ref ref="ColoredConsoleAppender" />-->
+  </logger>
+
+  <logger name="NHibernate.SQL" additivity="false">
+    <level value="DEBUG" />
+    <appender-ref ref="UdpAppender" />
+    <!--<appender-ref ref="TraceAppender" />
+    <appender-ref ref="ColoredConsoleAppender" />-->
   </logger>
 </log4net>
